--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,7 +5,11 @@
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+    <uses-permission android:name="com.android.alarm.permission.SET_ALARM" />
 
+    <uses-sdk
+        android:minSdkVersion="16"
+        />
 
     <application
         android:allowBackup="true"
@@ -39,14 +43,7 @@
                 </intent-filter>
         </activity>
 
-        <activity
-            android:name=".LeaveMap"
-            android:label="@string/app_name"
-            android:theme="@style/AppTheme.NoActionBar" >
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-            </intent-filter>
-        </activity>
+        <receiver android:name=".AlarmReceiver"/>
     </application>
 
 </manifest>
