--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,38 +12,41 @@
         />
 
     <application
-        android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
-        android:label="@string/app_name"
-        android:supportsRtl="true"
-        android:theme="@style/AppTheme" >
-
-        <uses-library android:name="com.google.android.maps" />
-        <meta-data android:name="com.google.android.geo.API_KEY" android:value="AIzaSyBJLeRb0NrbaQk47qJuIYaXpliG4W8EsXA"/>
-
-        <!-- Splash screen -->
-        <activity
-            android:name=".SplashScreen"
+            android:allowBackup="true"
+            android:icon="@mipmap/ic_launcher"
             android:label="@string/app_name"
-            android:screenOrientation="portrait"
-            android:theme="@android:style/Theme.Black.NoTitleBar" >
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-        </activity>
+            android:supportsRtl="true"
+            android:theme="@style/AppTheme" >
 
-        <activity
-            android:name=".MyActivity"
-            android:label="@string/app_name"
-            android:theme="@style/AppTheme.NoActionBar" >
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-                    <category android:name="android.intent.category.DEFAULT" />
+            <uses-library android:name="com.google.android.maps" />
+            <meta-data android:name="com.google.android.geo.API_KEY" android:value="AIzaSyBJLeRb0NrbaQk47qJuIYaXpliG4W8EsXA"/>
+
+            <!-- Splash screen -->
+            <activity
+                android:name=".SplashScreen"
+                android:label="@string/app_name"
+                android:screenOrientation="portrait"
+                android:theme="@android:style/Theme.Black.NoTitleBar" >
+                <intent-filter>
+                    <action android:name="android.intent.action.MAIN" />
+                    <category android:name="android.intent.category.LAUNCHER" />
                 </intent-filter>
-        </activity>
+            </activity>
 
-        <receiver android:name=".AlarmReceiver"/>
+            <activity
+                android:name=".MyActivity"
+                android:label="@string/app_name"
+                android:theme="@style/AppTheme.NoActionBar" >
+                <intent-filter>
+                    <action android:name="android.intent.action.MAIN" />
+                        <category android:name="android.intent.category.DEFAULT" />
+                    </intent-filter>
+            </activity>
+
+            <activity
+                android:name=".UserSettingsActivity"
+                android:theme="@style/AppTheme"></activity>
+
+            <receiver android:name=".AlarmReceiver"/>
     </application>
-
 </manifest>
